# D4G

./: .dockerignore  .gitignore  Dockerfile  README.md  init.sql  prod_kickinstance.sh  readme.TXT  readme.txt
backend/: Cargo.toml
backend/src/: controllers.rs  main.rs  model.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: index.html
frontend/src/css/: dopyo.css  main.css  milligram.css  milligram.min.css
frontend/src/js/: Backend.ts  File.ts  Polling.ts  dashboard.ts  dashboard_admin.ts  details.ts  dollard.ts  dom.ts  forget.ts  index.ts  login.ts  logo.ts  modal.ts  register.ts
frontend/src/templates/: forget.html  login.html
test_data/: locataire.csv  logement.csv  proprietaire.csv  releve.csv  utilisateur.csv
