[package]
name = "backend"
version = "0.1.0"
authors = ["DKFN <valere.tetelin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "^1.0.0"
actix-files = "^0.1.4"
actix-cors = "^0.1.0"
env_logger = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.40"
serde_derive= "*"
json = "*"
actix-web-actors = "*"
postgres= "*"
nanoid = "0.2.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
native-tls = "0.2.3"
regex = "1.3.1"
